# tech-challenge-3-FIAP

./: pyproject.toml
main/: app_resource.py
main/service/: Data_service.py
