[tool.poetry]
name = "br-com-tc-3"
version = "0.1.0"
description = ""
authors = ["felixmarcelo <felixmarcelo.mf@gmail.com>"]
readme = "README.md"
packages = [{include = "br"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
ipykernel = "^6.29.5"
plotly = "^5.24.1"
ipython = "^8.27.0"
nbformat = "^5.10.4"
yahoofinancials = "^1.20"
yfinance = "^0.2.43"
scikit-learn = "^1.5.2"
selenium = "^4.25.0"
webdriver-manager = "^4.0.2"
pytrends = "^4.9.2"
streamlit = "^1.38.0"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
